--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -24,6 +24,7 @@ jobs:
         registry: registry.cn-shenzhen.aliyuncs.com
         username: q2889895155
         password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - name: Run
       run: |
         cd "${GITHUB_WORKSPACE}"
         chmod +x ./run.sh
