--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -31,6 +31,7 @@ jobs:
         password: ${{ secrets.ALIYUN_CR_PASSWORD }}
     - name: Run
       run: |
+        export
         cd "${GITHUB_WORKSPACE}"
         chmod +x ./run.sh
         chmod +x ./sync.sh
@@ -49,6 +50,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Run
       run: |
+        export
         echo ${{ matrix.info.from }}
         echo ${{ matrix.info.to }}
         echo ${{ github.ref }}
