--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -11,8 +11,8 @@ jobs:
   base:
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}
-      cancel-in-progress: true
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: false
     steps:
     - uses: actions/checkout@v3
     - uses: docker/login-action@v2
@@ -36,7 +36,7 @@ jobs:
   run:
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}
+      group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: false
     needs:
       - base
