--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -26,15 +26,12 @@ jobs:
         registry: registry.cn-shenzhen.aliyuncs.com
         username: q2889895155
         password: ${{ secrets.ALIYUN_CR_PASSWORD }}
-    - name: Run
-      run: |
-        cd "${GITHUB_WORKSPACE}"
-        chmod +x ./sync.sh
   library:
     runs-on: ubuntu-latest
     needs:
       - base
     strategy:
+      max-parallel: 4
       matrix:
         info:
           - from: "golang"
@@ -43,6 +40,20 @@ jobs:
             to: "registry.cn-shenzhen.aliyuncs.com/hongfs/golang"
     steps:
     - uses: actions/checkout@v3
+    - uses: docker/login-action@v2
+      with:
+        username: hongfs
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-hongkong.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-shenzhen.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
     - name: Run
       run: |
         cd "${GITHUB_WORKSPACE}"
@@ -53,10 +64,25 @@ jobs:
     needs:
       - base
     strategy:
+      max-parallel: 4
       matrix:
         name: [test-track,system-setting,report-stat,project-management,performance-test,api-test,gateway,eureka,data-streaming,node-controller,ui-test,workstation]
     steps:
     - uses: actions/checkout@v3
+    - uses: docker/login-action@v2
+      with:
+        username: hongfs
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-hongkong.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-shenzhen.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
     - name: Run
       run: |
         cd "${GITHUB_WORKSPACE}"
