--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - image-sync
   schedule:
-    - cron: "30 0,12 * * *" # 北京时间每天 08/20:30
+    - cron: "30 0,5,12 * * *" # 北京时间每天 08/13/20:30
 
 concurrency:
   group: ${{ github.ref }}
