--- a/vue/nginx.conf
+++ b/vue/nginx.conf
@@ -24,6 +24,9 @@ server {
     ssl_stapling on;
     ssl_stapling_verify on;
 
+    resolver 223.5.5.5 119.29.29.29 1.2.4.8 valid=5m;
+    resolver_timeout 1s;
+
     access_log  /var/log/nginx/host.access.log  main;
     error_log  /var/log/nginx/error.log  error;
 
