--- a/vue/nginx.conf
+++ b/vue/nginx.conf
@@ -1,29 +1,30 @@
 server {
     listen 80;
-    listen [::]:80;
-    server_name  ${WEB_DOMAIN};
+    # listen [::]:80;
+    server_name ${WEB_DOMAIN};
 
     rewrite ^(.*)$  https://$host$1 permanent;
 }
 
 server {
-    listen       443 ssl http2;
-    listen       [::]:443 ssl http2;
-    server_name  ${WEB_DOMAIN};
+    listen 443 ssl http2;
+    # listen [::]:443 ssl http2;
+    server_name ${WEB_DOMAIN};
 
-    root   ${WEB_ROOT};
+    root ${WEB_ROOT};
     index index.html;
+
     server_tokens off;
 
     gzip on;
-    gzip_min_length  1k;
-    gzip_buffers     4 16k;
+    gzip_min_length 1k;
+    gzip_buffers 4 16k;
     gzip_http_version 1.1;
     gzip_comp_level 2;
-    gzip_types     text/plain application/javascript application/x-javascript text/javascript text/css application/xml application/xml+rss;
+    gzip_types text/plain application/javascript application/x-javascript text/javascript text/css application/xml application/xml+rss;
     gzip_vary on;
-    gzip_proxied   expired no-cache no-store private auth;
-    gzip_disable   "MSIE [1-6]\.";
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_disable "MSIE [1-6]\.";
 
     ssl_certificate "${WEB_SSL_PEM}";
     ssl_certificate_key "${WEB_SSL_KEY}";
@@ -53,7 +54,6 @@ server {
     location = /robots.txt  { access_log off; log_not_found off; }
 
     location / {
-        try_files $uri $uri/ /index.html;
     }
 
     error_page   500 502 503 504  /50x.html;
