--- a/vue/nginx.conf
+++ b/vue/nginx.conf
@@ -56,6 +56,8 @@ server {
     location / {
     }
 
+    error_page   404  /index.html;
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
         root   /usr/share/nginx/html;
