--- a/vue/nginx.conf
+++ b/vue/nginx.conf
@@ -45,7 +45,7 @@ server {
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+    # add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
     access_log  /var/log/nginx/host.access.log  main;
     error_log  /var/log/nginx/error.log  error;
