--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -12,6 +12,6 @@ jobs:
     - uses: actions/checkout@v3
     - name: RUN
       run: |
-        git remote add fastadmin git@gitee.com/fastadminnet/framework.git
+        git remote add fastadmin https://gitee.com/fastadminnet/framework.git
         git fetch fastadmin
         git pull fastadmin-data fastadmin
