--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: RUN
       run: |
+        git branch
         git remote add fastadmin https://gitee.com/fastadminnet/framework.git
         git fetch fastadmin
         git pull fastadmin-data fastadmin
