--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -11,8 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: RUN
-      run: |
-        git branch
-        git remote add gitee git@gitee.com:fastadminnet/framework.git
-        git branch -M fastadmin
-        git push -u gitee fastadmin
+      uses: wei/git-sync@v3
+      with:
+        source_repo: "gitee.com/fastadminnet/framework.git"
+        source_branch: "master"
+        destination_repo: "github.com/hongfs/hongfs"
+        destination_branch: "fastadmin-framework"
+        source_ssh_private_key: ${{ secrets.FASTADMIN_SYNC_GITEE_PRIVATE_KEY }}
