--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: wei/git-sync@v3
       with:
-        source_repo: "git@gitee.com/fastadminnet/framework.git"
+        source_repo: "git@gitee.com:fastadminnet/framework.git"
         source_branch: "master"
         destination_repo: "github.com/hongfs/hongfs"
         destination_branch: "fastadmin-framework"
