--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -12,11 +12,12 @@ jobs:
     - uses: actions/checkout@v3
     - name: RUN
       run: |
-        export
-    - uses: wei/git-sync@v3
-      with:
-        source_repo: "git@gitee.com:fastadminnet/framework.git"
-        source_branch: "master"
-        destination_repo: "git@github.com:hongfs/hongfs"
-        destination_branch: "fastadmin-framework"
-        source_ssh_private_key: ${{ secrets.FASTADMIN_SYNC_GITEE_PRIVATE_KEY }}
+        echo $USER
+        cd
+        pwd
+        mkdir -p .ssh/
+        echo "${{ secrets.FASTADMIN_SYNC_GITEE_PRIVATE_KEY }}" | sed 's/\\n/\n/g' >/root/.ssh/src_rsa
+        chmod 600 .ssh/src_rsa
+        git remote add fastadmin git@gitee.com:fastadminnet/framework.git
+        git branch -M fastadmin-framework
+        git push -u fastadmin fastadmin-framework
