--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -15,7 +15,7 @@ jobs:
         echo $USER
         pwd
         mkdir -p ~/.ssh/
-        echo "${{ secrets.FASTADMIN_SYNC_GITEE_PRIVATE_KEY }}" | sed 's/\\n/\n/g' > ~/.ssh/src_rsa
+        echo "${{ secrets.FASTADMIN_SYNC_GITEE_PRIVATE_KEY }}" > ~/.ssh/src_rsa
         chmod 600 ~/.ssh/src_rsa
         git remote add fastadmin git@gitee.com:fastadminnet/framework.git
         git branch -M fastadmin-framework
