--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: RUN
-      run: |
-        sudo mkdir -p ~/.ssh/
-        sudo echo "${{ secrets.FASTADMIN_SYNC_GITEE_PRIVATE_KEY }}" >> ~/.ssh/src_rsa
-        sudo chmod 600 ~/.ssh/src_rsa
-        sudo git remote add fastadmin git@gitee.com:fastadminnet/framework.git
-        sudo git branch -M fastadmin-framework
-        sudo git push -u fastadmin fastadmin-framework
+    - uses: wei/git-sync@v3
+      with:
+        source_repo: "git@gitee.com:fastadminnet/framework.git"
+        source_branch: "master"
+        destination_repo: "git@github.com:hongfs/hongfs.git"
+        destination_branch: "fastadmin-framework"
+        source_ssh_private_key: ${{ secrets.FASTADMIN_SYNC_GITEE_PRIVATE_KEY }}
+        destination_ssh_private_key: ${{ secrets.FASTADMIN_SYNC_GITHUB_PRIVATE_KEY }}
