--- a/php/release.conf
+++ b/php/release.conf
@@ -3,7 +3,24 @@ server {
     # listen [::]:80;
     server_name ${WEB_DOMAIN};
 
-    rewrite ^(.*)$  https://$host$1 permanent;
+    # rewrite ^(.*)$  https://$host$1 permanent;
+
+    root ${WEB_ROOT};
+    index index.php index.html;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ \.php$ {
+       root           html;
+       fastcgi_pass   ${FASTCGI_NAME}:9000;
+       fastcgi_index  index.php;
+       fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+       include        fastcgi_params;
+    }
+
+    error_page 404 /index.php;
 }
 
 server {
