--- a/php/release.conf
+++ b/php/release.conf
@@ -61,7 +61,7 @@ server {
        fastcgi_pass   ${FASTCGI_NAME}:9000;
        fastcgi_index  index.php;
        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-       include        fastcgi_params;
+       include        /etc/nginx/fastcgi_params;
     }
 
     error_page 404 /index.php;
