--- a/php/release.conf
+++ b/php/release.conf
@@ -58,9 +58,12 @@ server {
     }
 
     location ~ \.php$ {
+        if (!-f $document_root$fastcgi_script_name) {
+            return  401;
+        }
+
         fastcgi_pass   ${FASTCGI_NAME}:9000;
         fastcgi_index  index.php;
-        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
