--- a/php/release.conf
+++ b/php/release.conf
@@ -60,6 +60,7 @@ server {
     location ~ \.php$ {
         fastcgi_pass   ${FASTCGI_NAME}:9000;
         fastcgi_index  index.php;
+        include /etc/nginx/fastcgi_params;
     }
 
     error_page 404 /index.php;
