--- a/php/release.conf
+++ b/php/release.conf
@@ -61,6 +61,8 @@ server {
         fastcgi_pass   ${FASTCGI_NAME}:9000;
         fastcgi_index  index.php;
         include /etc/nginx/fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     error_page 404 /index.php;
