--- a/php/release.conf
+++ b/php/release.conf
@@ -59,10 +59,9 @@ server {
 
     location ~ \.php$ {
         fastcgi_pass   ${FASTCGI_NAME}:9000;
-        fastcgi_index  index.php;
-        include /etc/nginx/fastcgi_params;
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+        include fastcgi_params;
     }
 
     error_page 404 /index.php;
