--- a/php/release.conf
+++ b/php/release.conf
@@ -56,6 +56,8 @@ server {
     location ~ \.php$ {
         fastcgi_pass   ${FASTCGI_NAME}:9000;
         fastcgi_index index.php;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include        fastcgi_params;
     }
 
     error_page 404 /index.php;
