--- a/php/release.conf
+++ b/php/release.conf
@@ -56,7 +56,7 @@ server {
     location ~ \.php$ {
         fastcgi_pass   ${FASTCGI_NAME}:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME ${WEB_ROOT}$fastcgi_script_name
+        fastcgi_param SCRIPT_FILENAME /web$fastcgi_script_name;
         include        fastcgi_params;
     }
 
