--- a/php/release.conf
+++ b/php/release.conf
@@ -58,6 +58,7 @@ server {
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME /web$fastcgi_script_name;
         include        fastcgi_params;
+        limit_extensions  .php;
     }
 
     error_page 404 /index.php;
