--- a/php/release.conf
+++ b/php/release.conf
@@ -54,9 +54,11 @@ server {
     location = /robots.txt  { access_log off; log_not_found off; }
 
     location ~ \.php$ {
+        root ${WEB_ROOT};
+
         fastcgi_pass   ${FASTCGI_NAME}:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /web$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include        fastcgi_params;
         limit_extensions  .php;
     }
