--- a/php/release.conf
+++ b/php/release.conf
@@ -58,9 +58,11 @@ server {
 
         fastcgi_pass   ${FASTCGI_NAME}:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param    DOCUMENT_ROOT      /web;
+        fastcgi_param SCRIPT_FILENAME /web$fastcgi_script_name;
         include        fastcgi_params;
-        limit_extensions  .php;
+        fastcgi_param    PATH_INFO          $fastcgi_path_info;
+fastcgi_param    PATH_TRANSLATED    $document_root$fastcgi_path_info;
     }
 
     error_page 404 /index.php;
