--- a/php/release.conf
+++ b/php/release.conf
@@ -53,15 +53,14 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    location ~ \.php$ {
+    location ~ \.php(.*)$ {
         root ${WEB_ROOT};
 
         fastcgi_pass ${FASTCGI_NAME}:9000;
         fastcgi_index index.php;
         fastcgi_param DOCUMENT_ROOT /web;
         fastcgi_param SCRIPT_FILENAME /web$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+        fastcgi_param PATH_INFO $1;
         include fastcgi_params;
     }
 
