--- a/php/release.conf
+++ b/php/release.conf
@@ -58,8 +58,8 @@ server {
 
         fastcgi_pass ${FASTCGI_NAME}:9000;
         fastcgi_index index.php;
-        fastcgi_param DOCUMENT_ROOT /web;
-        fastcgi_param SCRIPT_FILENAME /web$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT /usr/share/nginx/html;
+        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html$fastcgi_script_name;
         include fastcgi_params;
     }
 
