--- a/php/release.conf
+++ b/php/release.conf
@@ -55,11 +55,14 @@ server {
 
     location ~ \.php(.*)$ {
         root ${WEB_ROOT};
+        fastcgi_split_path_info ^((?U).+\.php)(.+)$;
 
         fastcgi_pass ${FASTCGI_NAME}:9000;
         fastcgi_index index.php;
         fastcgi_param DOCUMENT_ROOT /usr/share/nginx/html;
         fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html$fastcgi_script_name;
+        fastcgi_param  PATH_INFO  $fastcgi_path_info;
+        fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_path_info;
         include fastcgi_params;
     }
 
