--- a/php/release.conf
+++ b/php/release.conf
@@ -53,16 +53,15 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    location ~ \.php(.*)$ {
-        root ${WEB_ROOT};
-        fastcgi_split_path_info ^((?U).+\.php)(.+)$;
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-        fastcgi_pass ${FASTCGI_NAME}:9000;
+    location ~ \.php$ {
+        try_files $uri /index.php = 404;
+        fastcgi_pass ${WEB_FASTCGI};
         fastcgi_index index.php;
-        fastcgi_param DOCUMENT_ROOT /usr/share/nginx/html;
-        fastcgi_param SCRIPT_FILENAME /usr/share/nginx/html$fastcgi_script_name;
-        fastcgi_param  PATH_INFO  $fastcgi_path_info;
-        fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_path_info;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
 
