--- a/php/release.conf
+++ b/php/release.conf
@@ -7,7 +7,7 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
+    listen ${WEB_SSL_PORT} ssl http2;
     # listen [::]:443 ssl http2;
     server_name ${WEB_DOMAIN};
 
