--- a/php/release.conf
+++ b/php/release.conf
@@ -11,7 +11,7 @@ server {
     # listen [::]:443 ssl http2;
     server_name ${WEB_DOMAIN};
 
-    root ${WEB_ROOT};
+    root ${WEB_ROOT}/public;
     index index.php index.html;
 
     server_tokens off;
