--- a/php/release.conf
+++ b/php/release.conf
@@ -58,10 +58,9 @@ server {
     }
 
     location ~ \.php$ {
-        try_files $uri /index.php = 404;
         fastcgi_pass ${WEB_FASTCGI};
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root/$fastcgi_script_name;
         include fastcgi_params;
     }
 
