--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -24,7 +24,7 @@ jobs:
       max-parallel: 8
       matrix:
         info:
-          - from: "minio"
+          - from: "minio/minio"
             to: "registry.cn-hongkong.aliyuncs.com/hongfs/minio"
           - from: "golang"
             to: "registry.cn-hongkong.aliyuncs.com/hongfs/golang"
