--- a/.github/workflows/backup.yaml
+++ b/.github/workflows/backup.yaml
@@ -9,7 +9,7 @@ jobs:
   backup:
     runs-on: ubuntu-latest
     concurrency:
-      group: ${{ github.ref }}
+      group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
     steps:
     - name: Run
