--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -8,7 +8,7 @@ on:
     - cron: "30 0,5,12 * * *" # 北京时间每天 08/13/20:30
 
 concurrency:
-  group: ${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
