--- a/.github/workflows/fastadmin-sync.yaml
+++ b/.github/workflows/fastadmin-sync.yaml
@@ -11,6 +11,9 @@ on:
 jobs:
   base:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: true
     steps:
     - uses: actions/checkout@v3
     - uses: wei/git-sync@v3
