--- a/.github/workflows/backup.yaml
+++ b/.github/workflows/backup.yaml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - name: Run
       run: |
-        podman run -it --rm -e GET_TAGS=1 -e GET_BRANCH=1 -e BASE_DIR=/tmp -e GITHUB_OWNER=hongfs -e BAIDUPAN_TOKEN=${{ secrets.BACKUP_BAIDUPAN_TOKEN }} -e GITHUB_TOKEN=${{ secrets.BACKUP_GITHUB_TOKEN }} ghcr.io/hongfs/env:github-backup-to-baidupan
+        podman run -it --rm -e GET_TAGS=1 -e GET_BRANCH=1 -e BASE_DIR=/github_backup_20230406 -e GITHUB_OWNER=hongfs -e BAIDUPAN_TOKEN=${{ secrets.BACKUP_BAIDUPAN_TOKEN }} -e GITHUB_TOKEN=${{ secrets.BACKUP_GITHUB_TOKEN }} ghcr.io/hongfs/env:github-backup-to-baidupan
