--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -141,3 +141,18 @@ jobs:
         cd "${GITHUB_WORKSPACE}"
         chmod +x ./sync.sh
         TO=registry.${{ matrix.name }}.aliyuncs.com/hongfs/env FROM=ghcr.io/hongfs/env ./sync.sh
+  ghcr_env_to_dockerio:
+    runs-on: ubuntu-latest
+    needs:
+      - base
+    steps:
+    - uses: actions/checkout@v3
+    - uses: docker/login-action@v2
+      with:
+        username: hongfs
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    - name: Run
+      run: |
+        cd "${GITHUB_WORKSPACE}"
+        chmod +x ./sync.sh
+        TO=hongfs/env FROM=ghcr.io/hongfs/env ./sync.sh
