--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -42,7 +42,7 @@ jobs:
         password: ${{ secrets.ALIYUN_CR_PASSWORD }}
     - name: Run
       run: |
-        curl -v "http://get-docker-tags/get?name=${{ matrix.info.from }}"
+        curl -v "http://127.0.0.1:9000/get?name=${{ matrix.info.from }}"
         cd "${GITHUB_WORKSPACE}"
         chmod +x ./sync.sh
         FROM=${{ matrix.info.from }} TO=${{ matrix.info.to }} ./sync.sh
