--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-  library:
+  metersphere:
     runs-on: ubuntu-latest
     needs:
       - base
@@ -24,11 +24,8 @@ jobs:
         ports:
           - 9000:9000
     strategy:
-      max-parallel: 8
       matrix:
-        info:
-          - from: "golang"
-            to: "registry.cn-hongkong.aliyuncs.com/hongfs/golang"
+        name: [test-track,system-setting,report-stat,project-management,performance-test,api-test,gateway,eureka,data-streaming,node-controller,ui-test,workstation,jmeter-master]
     steps:
     - uses: actions/checkout@v3
     - uses: docker/login-action@v2
@@ -37,12 +34,91 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
     - uses: docker/login-action@v2
       with:
-        registry: registry.cn-hongkong.aliyuncs.com
+        registry: registry.cn-qingdao.aliyuncs.com
         username: q2889895155
         password: ${{ secrets.ALIYUN_CR_PASSWORD }}
     - name: Run
       run: |
-        curl -v "http://127.0.0.1:9000/get?name=${{ matrix.info.from }}"
         cd "${GITHUB_WORKSPACE}"
         chmod +x ./sync.sh
-        FROM=${{ matrix.info.from }} TO=${{ matrix.info.to }} ./sync.sh
+        FROM=registry.cn-qingdao.aliyuncs.com/metersphere/${{ matrix.name }} TO=hongfs/${{ matrix.name }} ./sync.sh
+  runnergo:
+    runs-on: ubuntu-latest
+    needs:
+      - base
+    services:
+      get-docker-tags:
+        image: ghcr.io/hongfs/env:get-docker-tags
+        ports:
+          - 9000:9000
+    strategy:
+      matrix:
+        name: [manage,web-ui,engine,file-server,collector,kafka,mysql,redis,mongo,zookeeper,manage-ws]
+    steps:
+    - uses: actions/checkout@v3
+    - uses: docker/login-action@v2
+      with:
+        username: hongfs
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-beijing.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - name: Run
+      run: |
+        cd "${GITHUB_WORKSPACE}"
+        chmod +x ./sync.sh
+        FROM=registry.cn-beijing.aliyuncs.com/runnergo/${{ matrix.name }} TO=hongfs/runnergo_${{ matrix.name }} ./sync.sh
+  aliyun_acs:
+    runs-on: ubuntu-latest
+    needs:
+      - base
+    services:
+      get-docker-tags:
+        image: ghcr.io/hongfs/env:get-docker-tags
+        ports:
+          - 9000:9000
+    strategy:
+      matrix:
+        name: [csi-node-driver-registrar,csi-plugin,csi-provisioner,autoscaler]
+    steps:
+    - uses: actions/checkout@v3
+    - uses: docker/login-action@v2
+      with:
+        username: hongfs
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-hangzhou.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - name: Run
+      run: |
+        cd "${GITHUB_WORKSPACE}"
+        chmod +x ./sync.sh
+        FROM=registry.cn-hangzhou.aliyuncs.com/acs/${{ matrix.name }} TO=hongfs/${{ matrix.name }} ./sync.sh
+  ghcr_env:
+    runs-on: ubuntu-latest
+    needs:
+      - base
+    services:
+      get-docker-tags:
+        image: ghcr.io/hongfs/env:get-docker-tags
+        ports:
+          - 9000:9000
+    strategy:
+      matrix:
+        name: [cn-shenzhen]
+    steps:
+    - uses: actions/checkout@v3
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-shenzhen.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - name: Run
+      run: |
+        cd "${GITHUB_WORKSPACE}"
+        chmod +x ./sync.sh
+        TO=registry.${{ matrix.name }}.aliyuncs.com/hongfs/env FROM=ghcr.io/hongfs/env ./sync.sh
