--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - image-sync
   schedule:
-    - cron: "30 0,5,12 * * *" # 北京时间每天 08/13/20:30
+    - cron: "0 * * * *" # 每小时同步一次
 
 # 已注释程序的同步
 
